Fixed issue with tile alignment

--- a/static/home.css
+++ b/static/home.css
@@ -6,3 +6,7 @@
     height: 0px;
     width: 0px;
 }
+
+.row {
+    margin-top: 2%;
+}
